--- a/配置参考/pdf_book_simple.tex
+++ b/配置参考/pdf_book_simple.tex
@@ -8,15 +8,22 @@
 
 \title{notebook}
 \author{Wander}
-
+\hypersetup{
+    pdftitle={notebook},
+    pdfauthor={Wander},
+    pdfsubject={subject},
+}
   
+
 \begin{document}
-\makemytitle
+\makemytitleA
+
+\flypage{感谢上帝}
 
 
 \frontmatter 
-\addchtoc{前言}
-\chapter*{前言}
+\addchtoc{序言}
+\chapter*{序言}
 
 
 \addchtoc{目录}
