--- a/mybook.sty
+++ b/mybook.sty
@@ -154,7 +154,6 @@
 \renewcommand{\emph}[1]{\textcolor{blue}{\textbf{#1}}}  
 
 \RequirePackage[normalem]{ulem}
-
 %波浪线稍微下移点。
 \renewcommand{\uwave}
 {\bgroup \markoverwith{\lower4.5\p@\hbox{\sixly \char58}}\ULon}
@@ -162,17 +161,34 @@
 %==================插入圖片=======%
 \RequirePackage{wrapfig}
 \RequirePackage{graphicx}
+% figure默认存放路径
 \graphicspath{{figures/}}
 %change the caption style a little like 1-1
 \renewcommand{\thefigure}{\arabic{chapter}-\arabic{figure}}
+% figure默认浮动控制H
 \floatplacement{figure}{H}
+
+\newenvironment{fig}[2][1]
+{\begin{figure}[H]
+\centering
+\includegraphics[scale=#1 , keepaspectratio]{#2}}
+{\end{figure}}
+
+\newenvironment{linefig}[2][1]
+{\begin{figure}[H]
+\centering
+\includegraphics[width=#1\linewidth ,totalheight=0.95\textheight , keepaspectratio]{#2}}
+{\end{figure}}
 
 
 %==============插入表格========%
 \RequirePackage{booktabs}
+%change the caption style a little like 1-1
 \renewcommand{\thetable}{\arabic{chapter}-\arabic{table}}
-%\renewcommand{\arraystretch}{1.3}
-%如果用setspace宏包而不是linespread调整行间距，那么才需要额外的表格行距拉大。
+% 表格行宽放大一点
+\renewcommand{\arraystretch}{1.5}
+% table默认浮动控制H
+\floatplacement{table}{H}
 
 
 % 简单的框线环境
