--- a/main.tex
+++ b/main.tex
@@ -1488,7 +1488,7 @@ O  & 奇数页(odd)
 
 
 \section{longtable宏包}
-特别长的表格推荐使用longtable宏包，它虽然在使用上有点类似booktabs宏包，但外面就不要加上table环境封装了，caption和label都跟在后面，都是很长的表格了，一定要跨页了，table的那一套浮动控制也不适用它了。就直接用longtable环境下使用即可。
+特别长的表格推荐使用longtable宏包，它虽然在使用上有点类似booktabs宏包，但外面就不要加上table环境封装了，caption和label都跟在后面，都是很长的表格了，一定要跨页了，table的那一套浮动控制也不适用它了。就直接使用longtable环境即可。
 
 你可能希望长表格的行间距缩小一些，用前面讨论的arraystretch方法局部作用即可。
 
