--- a/main.tex
+++ b/main.tex
@@ -45,16 +45,17 @@
 {\end{verse}}
 
  
-\title{XeLaTeX 指南}
-\author{wander}
+\title{XeLaTeX指南}
+\author{Wander}
 \hypersetup{
-    pdftitle={XeLaTeX 指南},
-    pdfauthor={wander},
+    pdftitle={XeLaTeX指南},
+    pdfauthor={Wander},
+    pdfcreator={Wander},
     pdfsubject={计算机.文档开发},
 }
  
 \begin{document}
-\makemytitleA
+\makemytitle
 
 \flypage{感谢上帝}
 
@@ -2062,6 +2063,7 @@ $ ，cases环境是amsmath包提供的。
 \item 正比  $\propto$ \verb+\propto+
 \item oint  $\oint_{m}^{x}b$ \verb+\oint_{m}^{x}b+
 \item 对于所有 $ \forall $  \verb+\forall+ 
+\item 所以 $ \therefore $ \verb+\therefore+
 \end{itemize}
 
 \section{常用箭头符号}
