--- a/mybook.sty
+++ b/mybook.sty
@@ -36,7 +36,7 @@
 %1.6 doublespacing
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
-\newcommand{\flypage}[1]{\begin{titlepage}\begin{center}\vspace*{\stretch{1}}{\Huge #1}\vspace*{\stretch{1}}\end{center}\end{titlepage}}
+\newcommand{\flypage}[1]{\begin{titlepage}\begin{center}\vspace*{\stretch{1}}{\fontsize{80pt}{40pt}\selectfont\sffamily #1}\vspace*{\stretch{1}}\end{center}\end{titlepage}}
 
 %===========加入目录 某章或某节=====%
 \newcommand{\addchtoc}[1]{
